specify tensorflow 1, clean code

--- a/fer2013.ipynb
+++ b/fer2013.ipynb
@@ -28,27 +28,15 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "cVbLZURCveTi",
         "colab_type": "code",
-        "id": "gwdg7Sv3XBaP",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "50b8e643-d706-466f-9a43-99e4648489fb"
+        "colab": {}
       },
       "source": [
-        "%tensorflow_version 2.x"
+        "%tensorflow_version 1.x"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "TensorFlow 2.x selected.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -75,10 +63,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "EjKPXZ3TX3Jb",
-        "outputId": "e67051dc-30cc-4d02-a5c7-d2b89a08aa43",
+        "outputId": "c47dba29-7ab2-461e-92dd-e9a3890a7b20",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 128
+          "height": 122
         }
       },
       "source": [
@@ -90,7 +78,7 @@
         "# Transform images from strings to lists of integers. TODO: use an array cast\n",
         "data['pixels'] = data['pixels'].apply(lambda x: [int(pixel) for pixel in x.split()])"
       ],
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,7 +101,7 @@
         "colab": {}
       },
       "source": [
-        "emotion_cat = {0:'Angry', 1:'Disgust', 2:'Fear', 3:'Happy', 4:'Sad', 5:'Surprise', 6:'Neutral'}\n",
+        "#emotion_cat = {0:'Angry', 1:'Disgust', 2:'Fear', 3:'Happy', 4:'Sad', 5:'Surprise', 6:'Neutral'}\n",
         "\n",
         "# See the target distribution (check for imbalance)\n",
         "#target_counts = data['emotion'].value_counts().reset_index(drop=False)\n",
@@ -174,10 +162,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "Yi3lopGhZIuT",
-        "outputId": "86b122e1-1994-44f0-c82d-382c3f9d210d",
+        "outputId": "18830ae3-2226-4b50-db55-2b74ba8627b1",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 88
         }
       },
       "source": [
@@ -198,15 +186,16 @@
         "    Dense(7,input_shape=(1024,1),activation='softmax',name='fc-softmax')\n",
         "])\n",
         "\n",
-        "print(\"Accuracy after training\")\n",
         "model.compile(loss='sparse_categorical_crossentropy',optimizer='adam',metrics=['accuracy'])"
       ],
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Accuracy after training\n"
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow_core/python/ops/resource_variable_ops.py:1630: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "If using Keras pass *_constraint arguments to layers.\n"
           ],
           "name": "stdout"
         }
@@ -225,9 +214,9 @@
         }
       },
       "source": [
-        "model.fit(X_train,y_train,batch_size=32,epochs=10,validation_data=(X_dev, y_dev))"
+        "model.fit(X_train,y_train,batch_size=32,epochs=5,validation_data=(X_dev, y_dev))"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
