--- a/fer2013.ipynb
+++ b/fer2013.ipynb
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -396,44 +396,16 @@
    },
    "outputs": [],
    "source": [
-    "data = pd.read_csv('fer2013/fer2013.csv')\n",
-    "data['pixels'] = data['pixels'].apply(lambda x: [int(pixel) for pixel in x.split()])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No file found\n"
-     ]
-    }
-   ],
-   "source": [
-    "try:\n",
-    "    X_train_res = np.load('X_train_res.npy')\n",
-    "    X_dev_res = np.load('X_dev_res.npy')\n",
-    "except:\n",
-    "    print('No file found')\n",
-    "    X_train_res = None\n",
-    "    X_dev_res = None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "hAjh6yOLYPZm"
-   },
-   "outputs": [],
-   "source": [
-    "if X_train_res is None:\n",
+    "# Function that reads the data from the csv file, increases the size of the images and returns the images and their labels\n",
+    "    # dataset: Data path\n",
+    "def get_data(dataset, pixelsize = 224):\n",
+    "    \n",
+    "    file_stream = file_io.FileIO(dataset, mode='r')\n",
+    "    data = pd.read_csv(file_stream)\n",
+    "\n",
+    "    #data = pd.read_csv('fer2013/fer2013.csv')\n",
+    "    data['pixels'] = data['pixels'].apply(lambda x: [int(pixel) for pixel in x.split()])\n",
+    "\n",
     "    data_train = data[data['Usage'] == 'Training']\n",
     "    #print('Number samples in the training dataset: ', data_train.shape[0])\n",
     "\n",
@@ -455,21 +427,8 @@
     "    # Retrieve dev input and target\n",
     "    X_dev, Y_dev = data_dev['pixels'].tolist(), data_dev['emotion'].values\n",
     "    X_dev = np.array(X_dev, dtype='float32').reshape(-1,48,48,1)\n",
-    "    X_dev = X_dev/255.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "EXi9lYtSHbq3"
-   },
-   "outputs": [],
-   "source": [
-    "pixelsize = 224\n",
-    "if X_dev_res is None:\n",
+    "    X_dev = X_dev/255.0\n",
+    "\n",
     "    X_dev_res = np.zeros((X_dev.shape[0], pixelsize,pixelsize,3))\n",
     "    for ind in range(X_dev.shape[0]):  #X_dev.shape[0]\n",
     "        sample = X_dev[ind]\n",
@@ -478,20 +437,8 @@
     "        #plt.show()\n",
     "        image_resized = resize(sample, (pixelsize, pixelsize), anti_aliasing=True)\n",
     "        X_dev_res[ind,:,:,:] = image_resized.reshape(pixelsize,pixelsize,1)\n",
-    "#         np.save('X_dev_res.npy', X_dev_res)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "msnO_J1VPyLa"
-   },
-   "outputs": [],
-   "source": [
-    "if X_train_res is None:\n",
+    "    #         np.save('X_dev_res.npy', X_dev_res)\n",
+    "\n",
     "    X_train_res = np.zeros((X_train.shape[0], pixelsize,pixelsize,3))\n",
     "    for ind in range(X_train.shape[0]):  #X_dev.shape[0]\n",
     "        sample = X_train[ind]\n",
@@ -500,19 +447,49 @@
     "        #plt.show()\n",
     "        image_resized = resize(sample, (pixelsize, pixelsize), anti_aliasing=True)\n",
     "        X_train_res[ind,:,:,:] = image_resized.reshape(pixelsize,pixelsize,1)\n",
-    "#         np.save('X_train_res.npy', X_train_res)"
+    "    #         np.save('X_train_res.npy', X_train_res)\n",
+    "\n",
+    "    Y_train_res = np.zeros((Y_train.size, Y_train.max()+1))\n",
+    "    Y_train_res[np.arange(Y_train.size),Y_train] = 1\n",
+    "    Y_dev_res = np.zeros((Y_dev.size, Y_dev.max()+1))\n",
+    "    Y_dev_res[np.arange(Y_dev.size),Y_dev] = 1\n",
+    "    \n",
+    "    return  X_train_res, Y_train_res, X_dev_res, Y_dev_res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Y_train_res = np.zeros((Y_train.size, Y_train.max()+1))\n",
-    "Y_train_res[np.arange(Y_train.size),Y_train] = 1\n",
-    "Y_dev_res = np.zeros((Y_dev.size, Y_dev.max()+1))\n",
-    "Y_dev_res[np.arange(Y_dev.size),Y_dev] = 1"
+    "# Data preparation\n",
+    "train_data_x, train_data_y  = get_data(train_dataset)\n",
+    "val_data  = get_data(eval_dataset)\n",
+    "\n",
+    "# Generate batches of tensor image data with real-time data augmentation. The data will be looped over (in batches) indefinitely\n",
+    "# rescale:          Rescaling factor (defaults to None). Multiply the data by the value provided (before applying any other transformation)\n",
+    "# rotation_range:   Int. Degree range for random rotations\n",
+    "# shear_range:      Float. Shear Intensity (Shear angle in counter-clockwise direction as radians)\n",
+    "# zoom_range:       Float or [lower, upper]. Range for random zoom. If a float, [lower, upper] = [1-zoom_range, 1+zoom_range]\n",
+    "# fill_mode :       Points outside the boundaries of the input are filled according to the given mode: {\"constant\", \"nearest\", \"reflect\" or \"wrap\"}\n",
+    "# horizontal_flip:  Boolean. Randomly flip inputs horizontally\n",
+    "train_datagen = ImageDataGenerator(\n",
+    "    rotation_range  = 10,\n",
+    "    shear_range     = 10, # 10 degrees\n",
+    "    zoom_range      = 0.1,\n",
+    "    fill_mode       = 'reflect',\n",
+    "    horizontal_flip = True)\n",
+    "\n",
+    "# Takes numpy data & label arrays, and generates batches of augmented/normalized data. Yields batcfillhes indefinitely, in an infinite loop\n",
+    "    # x:            Data. Should have rank 4. In case of grayscale data, the channels axis should have value 1, and in case of RGB data, \n",
+    "    #               it should have value 3\n",
+    "    # y:            Labels\n",
+    "    # batch_size:   Int (default: 32)\n",
+    "train_generator = train_datagen.flow(\n",
+    "    train_data_x,\n",
+    "    train_data_y,\n",
+    "    batch_size  = batch_size)"
    ]
   },
   {
