Print class imbalance and confusion matrix

--- a/fer2013.ipynb
+++ b/fer2013.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/amilkh/cs230-fer/blob/master/fer2013.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/amilkh/cs230-fer/blob/class-weight/fer2013.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -63,7 +63,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "EjKPXZ3TX3Jb",
-        "outputId": "c47dba29-7ab2-461e-92dd-e9a3890a7b20",
+        "outputId": "c2cca9d8-cb7a-42d4-b9b1-cb629f932109",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 122
@@ -78,7 +78,7 @@
         "# Transform images from strings to lists of integers. TODO: use an array cast\n",
         "data['pixels'] = data['pixels'].apply(lambda x: [int(pixel) for pixel in x.split()])"
       ],
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,50 +97,19 @@
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
-        "id": "oXIX_VLMYJty",
-        "colab": {}
-      },
-      "source": [
-        "#emotion_cat = {0:'Angry', 1:'Disgust', 2:'Fear', 3:'Happy', 4:'Sad', 5:'Surprise', 6:'Neutral'}\n",
-        "\n",
-        "# See the target distribution (check for imbalance)\n",
-        "#target_counts = data['emotion'].value_counts().reset_index(drop=False)\n",
-        "#target_counts.columns = ['emotion', 'number_samples']\n",
-        "#target_counts['emotion'] = target_counts['emotion'].map(emotion_cat)\n",
-        "#target_counts\n",
-        "\n",
-        "# Select randomly 10 images\n",
-        "#random_seed = 1\n",
-        "#data_sample = data.sample(10, random_state=random_seed)\n",
-        "#f, axarr = plt.subplots(2, 5, figsize=(20, 10))\n",
-        "\n",
-        "#i, j = 0, 0\n",
-        "#for idx, row in data_sample.iterrows():\n",
-        "#    img = np.array(row['pixels']).reshape(48,48)\n",
-        "#    axarr[i,j].imshow(img, cmap='gray')\n",
-        "#    axarr[i,j].set_title(emotion_cat[row['emotion']])\n",
-        "#    if j==4:\n",
-        "#        i += 1\n",
-        "#        j = 0\n",
-        "#    else:\n",
-        "#        j += 1"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab_type": "code",
         "id": "hAjh6yOLYPZm",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "56be3c80-23be-405d-e592-1b95125f7004"
       },
       "source": [
         "data_train = data[data['Usage']=='Training']\n",
-        "#print('Number samples in the training dataset: ', data_train.shape[0])\n",
-        "\n",
         "data_dev = data[data['Usage']=='PublicTest']\n",
-        "#print('Number samples in the development dataset: ', data_dev.shape[0])\n",
+        "\n",
+        "print('Number samples in the training dataset: ', data_train.shape[0])\n",
+        "print('Number samples in the development dataset: ', data_dev.shape[0])\n",
         "\n",
         "# Retrieve train input and target\n",
         "X_train, y_train = data_train['pixels'].tolist(), data_train['emotion'].values\n",
@@ -154,22 +123,137 @@
         "X_dev = np.array(X_dev, dtype='float32').reshape(-1,48,48,1)\n",
         "X_dev = X_dev/255.0"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Number samples in the training dataset:  28709\n",
+            "Number samples in the development dataset:  3589\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "oXIX_VLMYJty",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 266
+        },
+        "outputId": "a01db7d5-8091-48a2-cebf-14a75630b1c9"
+      },
+      "source": [
+        "emotion_cat = {0:'Angry', 1:'Disgust', 2:'Fear', 3:'Happy', 4:'Sad', 5:'Surprise', 6:'Neutral'}\n",
+        "\n",
+        "# See the training distribution\n",
+        "train_counts = data_train['emotion'].value_counts().reset_index(drop=False)\n",
+        "train_counts.columns = ['emotion', 'number_samples']\n",
+        "train_counts['emotion'] = train_counts['emotion'].map(emotion_cat)\n",
+        "train_counts"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>emotion</th>\n",
+              "      <th>number_samples</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Happy</td>\n",
+              "      <td>7215</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Neutral</td>\n",
+              "      <td>4965</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Sad</td>\n",
+              "      <td>4830</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Fear</td>\n",
+              "      <td>4097</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Angry</td>\n",
+              "      <td>3995</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>Surprise</td>\n",
+              "      <td>3171</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>Disgust</td>\n",
+              "      <td>436</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    emotion  number_samples\n",
+              "0     Happy            7215\n",
+              "1   Neutral            4965\n",
+              "2       Sad            4830\n",
+              "3      Fear            4097\n",
+              "4     Angry            3995\n",
+              "5  Surprise            3171\n",
+              "6   Disgust             436"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 42
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
         "id": "Yi3lopGhZIuT",
-        "outputId": "18830ae3-2226-4b50-db55-2b74ba8627b1",
+        "outputId": "1a2c97e7-fbd3-44cc-979c-8dc78f311199",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 88
         }
       },
       "source": [
-        "#Baseline model\n",
+        "# Baseline model\n",
         "model = tf.keras.models.Sequential([\n",
         "    InputLayer(input_shape=(48,48,1),name=\"input\"),\n",
         "    Conv2D(filters=32,kernel_size=3,activation='relu',padding='same',name=\"conv1\"),\n",
@@ -188,7 +272,7 @@
         "\n",
         "model.compile(loss='sparse_categorical_crossentropy',optimizer='adam',metrics=['accuracy'])"
       ],
-      "execution_count": 9,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -207,41 +291,31 @@
         "colab_type": "code",
         "id": "iKzZuMBafv0a",
         "scrolled": true,
-        "outputId": "ef27572c-b831-42cd-cfc4-233392fe61ab",
+        "outputId": "c4f76a7b-4c0d-44df-c4bf-ec472ed408dd",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 417
+          "height": 241
         }
       },
       "source": [
         "model.fit(X_train,y_train,batch_size=32,epochs=5,validation_data=(X_dev, y_dev))"
       ],
-      "execution_count": 0,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Train on 28709 samples, validate on 3589 samples\n",
-            "Epoch 1/10\n",
-            "28709/28709 [==============================] - 17s 584us/sample - loss: 1.6761 - accuracy: 0.3339 - val_loss: 1.5370 - val_accuracy: 0.4249\n",
-            "Epoch 2/10\n",
-            "28709/28709 [==============================] - 16s 560us/sample - loss: 1.4407 - accuracy: 0.4403 - val_loss: 1.4101 - val_accuracy: 0.4505\n",
-            "Epoch 3/10\n",
-            "28709/28709 [==============================] - 16s 562us/sample - loss: 1.2629 - accuracy: 0.5178 - val_loss: 1.2694 - val_accuracy: 0.5157\n",
-            "Epoch 4/10\n",
-            "28709/28709 [==============================] - 16s 566us/sample - loss: 1.0398 - accuracy: 0.6124 - val_loss: 1.2580 - val_accuracy: 0.5244\n",
-            "Epoch 5/10\n",
-            "28709/28709 [==============================] - 16s 564us/sample - loss: 0.7337 - accuracy: 0.7324 - val_loss: 1.2882 - val_accuracy: 0.5380\n",
-            "Epoch 6/10\n",
-            "28709/28709 [==============================] - 16s 563us/sample - loss: 0.4361 - accuracy: 0.8464 - val_loss: 1.5633 - val_accuracy: 0.5439\n",
-            "Epoch 7/10\n",
-            "28709/28709 [==============================] - 16s 562us/sample - loss: 0.2589 - accuracy: 0.9119 - val_loss: 1.6783 - val_accuracy: 0.5352\n",
-            "Epoch 8/10\n",
-            "28709/28709 [==============================] - 16s 563us/sample - loss: 0.1866 - accuracy: 0.9403 - val_loss: 1.9683 - val_accuracy: 0.5414\n",
-            "Epoch 9/10\n",
-            "28709/28709 [==============================] - 16s 565us/sample - loss: 0.1464 - accuracy: 0.9553 - val_loss: 2.1586 - val_accuracy: 0.5358\n",
-            "Epoch 10/10\n",
-            "28709/28709 [==============================] - 16s 562us/sample - loss: 0.1323 - accuracy: 0.9607 - val_loss: 2.0127 - val_accuracy: 0.5325\n"
+            "Epoch 1/5\n",
+            "28709/28709 [==============================] - 17s 593us/sample - loss: 0.1279 - acc: 0.9605 - val_loss: 2.2538 - val_acc: 0.5358\n",
+            "Epoch 2/5\n",
+            "28709/28709 [==============================] - 17s 590us/sample - loss: 0.1167 - acc: 0.9637 - val_loss: 2.3105 - val_acc: 0.5327\n",
+            "Epoch 3/5\n",
+            "28709/28709 [==============================] - 17s 589us/sample - loss: 0.1082 - acc: 0.9667 - val_loss: 2.2654 - val_acc: 0.5210\n",
+            "Epoch 4/5\n",
+            "28709/28709 [==============================] - 17s 590us/sample - loss: 0.0993 - acc: 0.9698 - val_loss: 2.3851 - val_acc: 0.5380\n",
+            "Epoch 5/5\n",
+            "28709/28709 [==============================] - 17s 585us/sample - loss: 0.0908 - acc: 0.9735 - val_loss: 2.2408 - val_acc: 0.5252\n"
           ],
           "name": "stdout"
         },
@@ -249,13 +323,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7f97d9e84e10>"
+              "<tensorflow.python.keras.callbacks.History at 0x7fba72ea9fd0>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 16
         }
       ]
     },
@@ -263,6 +337,46 @@
       "cell_type": "code",
       "metadata": {
         "id": "ABbKc8-Eq64L",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 153
+        },
+        "outputId": "06631355-a0f9-49b8-94b1-7f6459c95d11"
+      },
+      "source": [
+        "# Confusion matrix\n",
+        "from sklearn.metrics import confusion_matrix\n",
+        "y_pred = np.argmax(model.predict(X_dev), axis=1)\n",
+        "\n",
+        "print(pd.DataFrame(\n",
+        "  confusion_matrix(y_dev, y_pred), \n",
+        "  index=emotion_cat.values(), \n",
+        "  columns=emotion_cat.values()\n",
+        "  ))"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "          Angry  Disgust  Fear  Happy  Sad  Surprise  Neutral\n",
+            "Angry       171        6    60     57   89        21       63\n",
+            "Disgust       7       28     8      3    8         1        1\n",
+            "Fear         50        6   185     43   87        50       75\n",
+            "Happy        39        1    33    654   55        26       87\n",
+            "Sad          76        4   107     65  257        14      130\n",
+            "Surprise     21        3    35     23    9       293       31\n",
+            "Neutral      52        3    65     67  102        21      297\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Zh8BC8laPHbz",
         "colab_type": "code",
         "colab": {}
       },
