Add class weight balancing

--- a/fer2013.ipynb
+++ b/fer2013.ipynb
@@ -144,7 +144,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 266
         },
-        "outputId": "a01db7d5-8091-48a2-cebf-14a75630b1c9"
+        "outputId": "c39b7a2e-a81f-489d-bc6b-dd92c10528da"
       },
       "source": [
         "emotion_cat = {0:'Angry', 1:'Disgust', 2:'Fear', 3:'Happy', 4:'Sad', 5:'Surprise', 6:'Neutral'}\n",
@@ -153,9 +153,13 @@
         "train_counts = data_train['emotion'].value_counts().reset_index(drop=False)\n",
         "train_counts.columns = ['emotion', 'number_samples']\n",
         "train_counts['emotion'] = train_counts['emotion'].map(emotion_cat)\n",
-        "train_counts"
+        "train_counts\n",
+        "\n",
+        "# print(list(emotion_cat.values()))\n",
+        "# print(np.bincount(y_train))\n",
+        "# print(np.bincount(y_dev))"
       ],
-      "execution_count": 42,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -237,7 +241,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 42
+          "execution_count": 85
         }
       ]
     },
@@ -342,11 +346,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 153
         },
-        "outputId": "06631355-a0f9-49b8-94b1-7f6459c95d11"
+        "outputId": "de9ad7ad-10f3-4a6b-d893-e955ec2b00bf"
       },
       "source": [
         "# Confusion matrix\n",
         "from sklearn.metrics import confusion_matrix\n",
+        "\n",
         "y_pred = np.argmax(model.predict(X_dev), axis=1)\n",
         "\n",
         "print(pd.DataFrame(\n",
@@ -355,19 +360,51 @@
         "  columns=emotion_cat.values()\n",
         "  ))"
       ],
-      "execution_count": 40,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "          Angry  Disgust  Fear  Happy  Sad  Surprise  Neutral\n",
-            "Angry       171        6    60     57   89        21       63\n",
-            "Disgust       7       28     8      3    8         1        1\n",
-            "Fear         50        6   185     43   87        50       75\n",
-            "Happy        39        1    33    654   55        26       87\n",
-            "Sad          76        4   107     65  257        14      130\n",
-            "Surprise     21        3    35     23    9       293       31\n",
-            "Neutral      52        3    65     67  102        21      297\n"
+            "Angry       196        9    50     42  111        17       42\n",
+            "Disgust      11       29     1      3    9         1        2\n",
+            "Fear         67        3   178     33  114        44       57\n",
+            "Happy        48        2    31    629  100        22       63\n",
+            "Sad          91        7    90     56  293        14      102\n",
+            "Surprise     30        1    31     22   17       286       28\n",
+            "Neutral      75        4    49     67  134        19      259\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2ud4lo1GWOQd",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "8ce14852-1c42-4798-9bd7-3bdee3183364"
+      },
+      "source": [
+        "# Balance class weights\n",
+        "from sklearn.utils import class_weight\n",
+        "\n",
+        "class_weights = class_weight.compute_class_weight('balanced', np.unique(y_train), y_train)\n",
+        "print(list(emotion_cat.values()))\n",
+        "print(class_weights)"
+      ],
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['Angry', 'Disgust', 'Fear', 'Happy', 'Sad', 'Surprise', 'Neutral']\n",
+            "[1.02660468 9.40661861 1.00104606 0.56843877 0.84912748 1.29337298\n",
+            " 0.82603942]\n"
           ],
           "name": "stdout"
         }
@@ -378,13 +415,48 @@
       "metadata": {
         "id": "Zh8BC8laPHbz",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 241
+        },
+        "outputId": "5e24c6b2-457a-43de-fbcb-dcecc4f14015"
       },
       "source": [
-        ""
+        "# Retrain with balanced class weights\n",
+        "model.fit(X_train,y_train,batch_size=32,epochs=5,validation_data=(X_dev, y_dev),class_weight=class_weights)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Train on 28709 samples, validate on 3589 samples\n",
+            "Epoch 1/5\n",
+            "28709/28709 [==============================] - 17s 589us/sample - loss: 0.0750 - acc: 0.9783 - val_loss: 2.4106 - val_acc: 0.5297\n",
+            "Epoch 2/5\n",
+            "28709/28709 [==============================] - 17s 585us/sample - loss: 0.0602 - acc: 0.9827 - val_loss: 2.4341 - val_acc: 0.5263\n",
+            "Epoch 3/5\n",
+            "28709/28709 [==============================] - 17s 584us/sample - loss: 0.0624 - acc: 0.9820 - val_loss: 2.4693 - val_acc: 0.5174\n",
+            "Epoch 4/5\n",
+            "28709/28709 [==============================] - 17s 584us/sample - loss: 0.0586 - acc: 0.9824 - val_loss: 2.5053 - val_acc: 0.5291\n",
+            "Epoch 5/5\n",
+            "28709/28709 [==============================] - 17s 585us/sample - loss: 0.0628 - acc: 0.9820 - val_loss: 2.7494 - val_acc: 0.5163\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tensorflow.python.keras.callbacks.History at 0x7fb90e12f2e8>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 90
+        }
+      ]
     }
   ]
 }
